--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	function initEmbeddedMessaging() {
 		try {
 			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-			embeddedservice_bootstrap.settings.dev_mode = true; 
+			embeddedservice_bootstrap.settings.devMode = true; 
 			embeddedservice_bootstrap.init(
 				'00DVR000001qWhZ',
 				'Nelly_Bot_Deployment',
