--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 			// embeddedservice_bootstrap.settings.devMode = true; 
 			embeddedservice_bootstrap.init(
-				'00DVR000001qWhZ',
-				'Nelly_Bot_Deployment',
-				'https://dvr000001qwhz2au.perf1v.my.pc-rnd.site.com/ESWNellyBotDeployment1722500139981',
+				'00DLT000009HeK1',
+				'MIAW_InApp_Channel_2',
+				'https://orgfarm-c3a139777a.test1.my.pc-rnd.site.com/ESWMIAWInAppChannel21758004911704',
 				{
-					scrt2URL: 'https://dvr000001qwhz2au.perf1v.my.pc-rnd.salesforce-scrt.com'
+					scrt2URL: 'https://orgfarm-c3a139777a.test1.my.pc-rnd.salesforce-scrt.com'
 				}
 			);
 		} catch (err) {
@@ -27,5 +27,5 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://dvr000001qwhz2au.perf1v.my.pc-rnd.site.com/ESWNellyBotDeployment1722500139981/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script></body>
+<script type='text/javascript' src='https://orgfarm-c3a139777a.test1.my.pc-rnd.site.com/ESWMIAWInAppChannel21758004911704/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script></body>
 </html>
